# Primitive-CUA

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  uia_after.txt  uia_before.txt
cua/: MACRO_GUIDE.md  __init__.py  agent.py  cli.py  config.example.yaml  config.py  element_manager.py  fast_replay.py  learning.py  macro_editor.py  ocr_patch.py  overlay.py  recorder.py  replay.py  requirements.txt  script_runner.py  test_overlay.py  test_uia_warmup.py
cua/data/knowledge/: boss-zhipin-web-workflow.md  universal-best-practices.md  wechat-moments-workflow.md  wechat-workflow.md  windows-input-method.md
cua/data/scripts/: example_wechat.cua
cua/data/skills/: access-zhihu-article-without-login.md  boss-zhipin-job-market-report.md  notepad-set-text-via-uia.md  paste-text-into-focused-application.md  (+4 more)
cua/knowledge/: app-launch-context.md  core-interaction-paradigms.md  office-word-workflow.md  subagent-orchestration.md  template.md.example  universal-best-practices.md  web-zhihu-workflow.md  wechat-workflow.md
cua/subagents/: __init__.py  draft_content.py  image_gen.py
cua/test/: search_task.py
cua/tools/: __init__.py  clipboard.py  document.py  finish.py  human.py  keyboard.py  kimi_memory.py  loader.py  magnifier.py  mouse.py  ocr.py  pdf.py  screenshot.py  shell.py  think.py  uia.py  utility.py  web.py  windows.py
docs/GUI-Plus-api/: GUI-Plus-api.md  GUI-Plus-introduce.md
docs/kimi-api/: kimi_k2.6_api_reference.md  kimi_k3.md
docs/scripts/: ELEMENT_ENGINE.md  SCRIPT_ENGINE.md
docs/task/: descreption.txt  project-summary-report.md  tasks.txt
(+11 files in other folders)
