[project]
name = "cua"
version = "0.1.0"
description = "Primitive Computer Use Agent"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "openai>=1.0.0",
    "rapidocr-onnxruntime>=1.2.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
